# isekai-rs

./: .gitignore  Cargo.toml
src/: component.rs  event_handler.rs  main.rs
